# pixelpivot-batch

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOLT_REMOTE.md  Dockerfile  GEMINI.md  INSTRUCTIONS.md  LICENSE  MEMORY.md  NOTICE  PixelPivot.wsb  README.md  Run-PixelPivot.ps1  air_gapped_guide.md  c6rfjdbhvel6sigjohcruj9pdm8ddegr  codebase_inspection_prompt.md  codebase_review_report.json  debug_st.py  docker-compose.yml  main.py  manifest  merge_sum.md  next_steps_dev_plan.md  next_steps_guide.md  package-lock.json  package.json  pixelpivot.spec  pixelpivot_guide.bat  pixelpivot_service.spec  pyproject.toml  pytest.ini  qvk2tvjem0odmag2me8cdgasbfoajthq  refactoring_plan_20260519_1600.md  run_tui.bat  start.bat  task_gen_prompt_request.txt  tasks.yaml  (+3 more)
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.streamlit/: config.toml
app/: __init__.py  cli.py  heuristic_table.json  heuristic_weights.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXIF_POLICY.md  TUI_GUIDE.md  USER_GUIDE.md  WINDOWS_SERVICE.md  blueprint.md  chat_sum_20260516_2100.md  generate_tasks_prompt.md  implementation_plan.md  recommendation_distributed_scaling.md  session_sum_260514_1524.md
installer/: pixelpivot.iss
sandbox/: debian-docker-setup.sh  launch-sandbox.ps1  setup.ps1
scripts/: air_gap_deps.txt  build_bundle.ps1  build_deploy.ps1  build_exe.ps1  cleanup_duplicates.py  docker_e2e_test.py  download_wheels.ps1  export_airgap.sh  gen_e2e_dataset.ps1  install_windows_service.ps1  interactive_e2e.sh  manifest.ps1  prepare_airgap_wsl.ps1  prepare_clean_wsl_distro.ps1  sandbox_init.ps1  setup_linux_binaries.py  setup_new_wsl.ps1  setup_sharp_portable.ps1  smoke_test.ps1  steelthread_oom.py  test_e2e_airgap.ps1  verify_api_endpoints.py  wsl_start.sh
tasks/: AUTONOMOUS_FIX_PROMPT.md  EXECUTION_STATUS.md  STEEL_THREAD_AUDIT.md  task_000_matrix_audit_summary.md  task_020_telemetry_fk_dead_table.md  task_021_logger_rotation_permissionerror.md  task_022_wheel_floor_mismatch.md  task_023_sandbox_npm_install_offline.md  task_024_quality_int_cast_violations.md  task_025_hot_folder_debounce_config_inert.md  task_026_dedupe_air_gap_dep_lists.md  task_027_streamlit_google_fonts_egress.md
tests/: bench_ffmpeg_batch.py  conftest.py  test_airgap_streamlit_telemetry.py  test_api_tracing.py  test_avif_real_images.py  test_base_converter.py  test_batch_db_import.py  test_batch_repo_sqlite.py  test_circuit_breaker_isolation.py  test_cli.py  test_cli_dispatch.py  test_config_ffmpeg_batch_constants.py  test_db_batch.py  test_dlq.py  (+68 more)
(+247 files in other folders)
