[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Pin discovery to the app package. Without this, setuptools flat-layout
# auto-discovery sees the many top-level runtime dirs (out, data, deploy,
# vendor, node_modules, ...) and refuses to build (ambiguous packages).
[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "pixelpivot-batch"
version = "0.1.0"
description = "High-throughput image conversion microservice with hybrid native-batching converter backends and a fitted log-linear quality heuristic."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Idan Presser", email = "idanpresser@gmail.com"},
]
keywords = [
    "image-conversion",
    "batch-processing",
    "ffmpeg",
    "imagemagick",
    "libvips",
    "sharp",
    "avif",
    "webp",
    "jxl",
    "fastapi",
    "streamlit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "watchdog>=4.0",
    "Pillow>=10.0",
    "pillow-heif>=0.15",
    "pyvips>=2.2",
    "pandas>=2.2",
    "psutil>=5.9",
    "nvidia-ml-py>=12.535",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
pixelpivot-cli = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "wand>=0.6",
]
# Optional Streamlit GUI (app/web/batch_gui). Not a runtime dependency of the
# headless backend and excluded from the frozen air-gap build; install with
# `pip install pixelpivot-batch[gui]` to run the dashboard separately.
gui = [
    "streamlit>=1.32",
]

[project.urls]
Homepage = "https://github.com/idanpresser/pixelpivot-batch"
Repository = "https://github.com/idanpresser/pixelpivot-batch.git"
Issues = "https://github.com/idanpresser/pixelpivot-batch/issues"
Changelog = "https://github.com/idanpresser/pixelpivot-batch/blob/main/CHANGELOG.md"
